[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/design.graffiti.SNAP____.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/register.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/registerSprites/registerScreenWithoutButtons.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/registerSprites/registerButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/registerSprites/labelText.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 7
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 7
font_data = ExtResource( 1 )

[node name="register" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -128.0
margin_right = 72.0
margin_bottom = 128.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 396.0
margin_bottom = 704.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="registerButton" type="Button" parent="."]
margin_left = 34.0
margin_top = 208.56
margin_right = 107.0
margin_bottom = 228.56
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonSprite" type="Sprite" parent="registerButton"]
position = Vector2( 38.3679, -80.6854 )
scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 4 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Container" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="loginLabelEdit" type="LineEdit" parent="Container"]
modulate = Color( 1, 1, 1, 0.0470588 )
margin_left = 26.0
margin_top = 85.0
margin_right = 119.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loginSprite" type="Sprite" parent="Container"]
position = Vector2( 72, 129.587 )
scale = Vector2( 0.35, 0.28 )
texture = ExtResource( 5 )

[node name="loginLabel" type="Label" parent="Container"]
margin_left = 15.0
margin_top = 87.0
margin_right = 130.0
margin_bottom = 102.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmLoginLabelEdit" type="LineEdit" parent="Container"]
modulate = Color( 1, 1, 1, 0.0588235 )
margin_left = 26.0
margin_top = 125.0
margin_right = 120.0
margin_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirmLoginSprite" type="Sprite" parent="Container"]
position = Vector2( 72, 170.057 )
scale = Vector2( 0.35, 0.28 )
texture = ExtResource( 5 )

[node name="confirmLoginLabel" type="Label" parent="Container"]
margin_left = 15.0
margin_top = 128.0
margin_right = 130.0
margin_bottom = 143.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwordLabelEdit" type="LineEdit" parent="Container"]
modulate = Color( 1, 1, 1, 0.0117647 )
margin_left = 26.0
margin_top = 167.0
margin_right = 120.0
margin_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
align = 1
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwordSprite" type="Sprite" parent="Container"]
position = Vector2( 72, 212.013 )
scale = Vector2( 0.35, 0.28 )
texture = ExtResource( 5 )

[node name="passwordLabel" type="Label" parent="Container"]
margin_left = 15.0
margin_top = 169.0
margin_right = 130.0
margin_bottom = 184.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notificationLabel" type="Label" parent="Container"]
margin_left = 0.470276
margin_top = 191.059
margin_right = 143.47
margin_bottom = 203.059
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="registerButton" to="." method="onRegisterButtonPressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
